cmake_minimum_required(VERSION 3.17)
project(C_Zsh_dev C)

set(CMAKE_C_STANDARD 11)

add_executable(C_Zsh_dev main.c)
add_executable(Chapter1 Chapter1/main1.c)
add_executable(Zsb_Day1 Zsb_Day1/Zsb_Day1.c)
add_executable(Zsb_Day2 Zsb_Day2/Zsb_Day2.c)
add_executable(Zsb_Day3 Zsb_Day3/Zsb_Day3.c)
add_executable(Zsb_Day4 Zsb_Day4/Zsb_Day4.c)
add_executable(Zsb_Day5 Zsb_Day5/Zsb_Day5.c)
add_executable(Zsb_Day6 Zsb_Day6/Zsb_Day6.c)
add_executable(Zsb_Day7 Zsb_Day7/Zsb_Day7.c)
add_executable(Test_Demo Test_Demo/Day1.c)
add_executable(Test_Demo2 Test_Demo2/Day2.c)
add_executable(Test_Demo3 Test_Demo3/Day3.c)
add_executable(Test_Demo4 Test_Demo4/Day4.c)
add_executable(Test_Demo5 Test_Demo5/Day5.c)
add_executable(Test_Demo6 Test_Demo6/Day6.c)
add_executable(Test_Demo7 Test_Demo7/Day7.c)
